Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13026

LNet Routing: gateway NI not selected properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      • When selecting a gateway NI, use the selection algorithm to pick the best NI on the gateway
        • If we're not restricting on a specific net, then just select any gateway interface we can reach the gateway on
        • If we're restricting on a specific net, then select a peer ni on the gateway net specified

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: